--- a/ToDoList_Malherbe_Bouttier/app/src/main/res/layout/activity_main.xml
+++ b/ToDoList_Malherbe_Bouttier/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,107 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="@drawable/christmas_background"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <ImageButton
+            android:id="@+id/btn_menu"
+            android:layout_width="36dp"
+            android:layout_height="32dp"
+            android:onClick="showMenu"
+            android:src="@drawable/ic_menu_icone"
+            android:text="@string/menu"
+            tools:ignore="OnClick"
+            android:contentDescription="@string/todo" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="564dp"
+            android:orientation="vertical">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="166dp">
+
+                <Button
+                    android:id="@+id/btn_ev"
+                    android:layout_width="156dp"
+                    android:layout_height="63dp"
+                    android:layout_weight="1"
+                    android:text="@string/evenement"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.138"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.652" />
+
+                <ImageButton
+                    android:id="@+id/btn_choixEv"
+                    android:layout_width="52dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="88dp"
+                    android:layout_marginRight="88dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_menu_points"
+                    android:text="..."
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.873"
+                    app:layout_constraintStart_toEndOf="@+id/btn_ev"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.626" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="139dp">
+
+                <Button
+                    android:id="@+id/btn_event2"
+                    android:layout_width="160dp"
+                    android:layout_height="59dp"
+                    android:layout_weight="1"
+                    android:text="@string/evenement"
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.118"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.659" />
+
+                <ImageButton
+                    android:id="@+id/btn_choixEvenement2"
+                    android:layout_width="52dp"
+                    android:layout_height="32dp"
+                    android:layout_marginEnd="88dp"
+                    android:layout_marginRight="88dp"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_menu_points"
+                    android:text="..."
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintStart_toEndOf="@+id/btn_event2"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.644"
+                    android:contentDescription="@string/todo" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
