--- a/ToDoList_Malherbe_Bouttier/app/src/main/res/layout/activity_main.xml
+++ b/ToDoList_Malherbe_Bouttier/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    android:background="@drawable/christmas_background"
+    android:background="@drawable/pexels"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -19,17 +19,17 @@
 
         <ImageButton
             android:id="@+id/btn_menu"
-            android:layout_width="36dp"
-            android:layout_height="32dp"
+            android:layout_width="80dp"
+            android:layout_height="64dp"
+            android:contentDescription="@string/todo"
             android:onClick="showMenu"
             android:src="@drawable/ic_menu_icone"
             android:text="@string/menu"
-            tools:ignore="OnClick"
-            android:contentDescription="@string/todo" />
+            tools:ignore="OnClick" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="564dp"
+            android:layout_height="777dp"
             android:orientation="vertical">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,19 +39,19 @@
                 <Button
                     android:id="@+id/btn_ev"
                     android:layout_width="156dp"
-                    android:layout_height="63dp"
+                    android:layout_height="65dp"
                     android:layout_weight="1"
                     android:text="@string/evenement"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.138"
+                    app:layout_constraintHorizontal_bias="0.13"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.652" />
+                    app:layout_constraintVertical_bias="0.841" />
 
                 <ImageButton
-                    android:id="@+id/btn_choixEv"
+                    android:id="@+id/btn_optionEvent1"
                     android:layout_width="52dp"
                     android:layout_height="32dp"
                     android:layout_marginEnd="88dp"
@@ -61,10 +61,9 @@
                     android:text="..."
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.873"
                     app:layout_constraintStart_toEndOf="@+id/btn_ev"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.626" />
+                    app:layout_constraintVertical_bias="0.805" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -74,11 +73,11 @@
 
                 <Button
                     android:id="@+id/btn_event2"
-                    android:layout_width="160dp"
-                    android:layout_height="59dp"
+                    android:layout_width="161dp"
+                    android:layout_height="66dp"
                     android:layout_weight="1"
                     android:text="@string/evenement"
-                    android:textSize="12sp"
+                    android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.118"
@@ -87,21 +86,21 @@
                     app:layout_constraintVertical_bias="0.659" />
 
                 <ImageButton
-                    android:id="@+id/btn_choixEvenement2"
+                    android:id="@+id/btn_optionEvent2"
                     android:layout_width="52dp"
                     android:layout_height="32dp"
                     android:layout_marginEnd="88dp"
                     android:layout_marginRight="88dp"
                     android:layout_weight="1"
+                    android:contentDescription="@string/todo"
                     android:src="@drawable/ic_menu_points"
                     android:text="..."
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
+                    app:layout_constraintHorizontal_bias="0.461"
                     app:layout_constraintStart_toEndOf="@+id/btn_event2"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.644"
-                    android:contentDescription="@string/todo" />
+                    app:layout_constraintVertical_bias="0.626" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
