--- a/ToDoList_Malherbe_Bouttier/app/src/main/res/layout/activity_about.xml
+++ b/ToDoList_Malherbe_Bouttier/app/src/main/res/layout/activity_about.xml
@@ -4,5 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/christmas_gift"
-    tools:context=".ListeActivity"/>
+    tools:context=".AboutActivity">
+
+</androidx.constraintlayout.widget.ConstraintLayout>
