--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_detail.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_detail.xml
@@ -9,6 +9,23 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" >
+
+    </ListView>
+
+    <ImageButton
+        android:id="@+id/addEventDetailButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
+        tools:ignore="RtlSymmetry"
+        android:contentDescription= "@string/add_button"
+        android:src="@drawable/delete"
+        android:tint="@color/dark_grey"
+        android:layout_marginRight="30dp" />
 
 </RelativeLayout>
