--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_about.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_about.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/about"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AboutActivity">
+    android:background="@drawable/about_background"
+    android:orientation="vertical"
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".AboutActivity"
+    tools:ignore="ExtraText">
+
+
+    <TextView
+        android:id="@+id/txt_titleAbout"
+        android:layout_width="match_parent"
+        android:layout_height="224dp"
+        android:gravity="center|bottom"
+        android:text="A Propos de notre Application"
+        android:textColor="#000000"
+        android:textSize="30sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txt_about"
+        android:layout_width="314dp"
+        android:layout_height="303dp"
+        android:layout_gravity="center"
+        android:autofillHints=""
+        android:ems="10"
+        android:gravity="center"
+        android:textColor="@color/black" />
+</LinearLayout>
