--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_main.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent" >
     </ListView>
 
-    <Button
+    <ImageButton
         android:id="@+id/addEvent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -21,10 +21,7 @@
         android:layout_gravity="center"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:text="+"
-        android:textSize="32dp"
-        android:textStyle="bold"
-        android:tint="@color/dark_grey"
-        android:backgroundTint="@color/light_grey"/>
+        android:tint="@color/black"
+        android:src="@drawable/add_btn"/>
 
 </RelativeLayout>
