--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_detail.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_detail.xml
@@ -24,7 +24,7 @@
         android:layout_marginBottom="30dp"
         tools:ignore="RtlSymmetry"
         android:contentDescription= "@string/add_button"
-        android:src="@drawable/delete"
+        android:src="@drawable/add_btn"
         android:tint="@color/dark_grey"
         android:layout_marginRight="30dp" />
 
