--- a/Todolist_Bouttier_Malherbe/app/src/main/res/values/colors.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="light_grey">#FFAAAAAA</color>
     <color name="dark_grey">#FF333333</color>
     <color name="bleuelight">#8000BFFF</color>
+    <color name="topbleue">#3F3D7C</color>
+    <color name="bleueWhite">#96C3EC</color>
+
+
 </resources>
