background list ok

--- a/Todolist_Bouttier_Malherbe/app/src/main/res/values/colors.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/values/colors.xml
@@ -12,6 +12,5 @@
     <color name="bleuelight">#8000BFFF</color>
     <color name="topbleue">#3F3D7C</color>
     <color name="bleueWhite">#96C3EC</color>
-
-
+    <color name="redRibbon">#C32633</color>
 </resources>
