--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_detail.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_detail.xml
@@ -4,28 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/christmas"
     tools:context=".EventDetailActivity">
 
-    <ListView
-        android:id="@+id/listView"
+    <LinearLayout
+        android:id="@+id/ly"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="600dp"
+        android:orientation="vertical">
 
-    </ListView>
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="match_parent"
+            android:layout_height="520dp"
+            android:layout_marginTop="60dp">
+
+        </ListView>
+    </LinearLayout>
 
     <ImageButton
         android:id="@+id/addEventDetailButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/ly"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
-        tools:ignore="RtlSymmetry"
-        android:contentDescription= "@string/add_button"
+        android:contentDescription="@string/add_button"
+        android:background="@null"
         android:src="@drawable/add_btn"
         android:tint="@color/dark_grey"
-        android:layout_marginRight="30dp" />
+        tools:ignore="RtlSymmetry" />
 
 </RelativeLayout>
