--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_options.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_event_options.xml
@@ -23,6 +23,7 @@
         android:layout_marginEnd="179dp"
         android:layout_marginRight="179dp"
         android:paddingTop="10dp"
+
         android:text="Nom de l'évènement :"
         android:textSize="20sp" />
 
@@ -33,8 +34,9 @@
         android:layout_below="@id/textView"
         android:layout_alignLeft="@id/textView"
         android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
         android:background="@drawable/border"
-        android:text=" A completer"
+        android:text="A completer"
         android:textColor="@color/light_grey"/>
 
     <TextView
@@ -49,12 +51,15 @@
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
+        android:layout_width="395dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/textView2"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+
         android:background="@drawable/border"
-        android:layout_marginTop="20dp"/>
+        android:scrollbarSize="5dp"
+        android:weekNumberColor="#1B1212" />
 
     <Button
         android:id="@+id/deleteButton"
