--- a/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_add_event_detail.xml
+++ b/Todolist_Bouttier_Malherbe/app/src/main/res/layout/activity_add_event_detail.xml
@@ -4,75 +4,93 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/christmas"
+    android:layout_gravity="center"
     tools:context=".AddEventDetailActivity">
 
-    <TextView
-        android:id="@+id/firstnameLabel"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/firstname"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="30dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="30dp"
+        android:layout_height="324dp"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="30dp" />
-
-    <EditText
-        android:id="@+id/firstameInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/firstnameLabel"
-        android:layout_marginTop="10dp"
-        android:layout_alignLeft="@id/firstnameLabel"
-        android:layout_alignStart="@id/firstnameLabel"
-        android:autofillHints="@string/firstname"
-        android:hint="@string/firstname"
-        android:inputType="text" />
-
-    <TextView
-        android:id="@+id/informationLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/information"
-        android:layout_below="@id/firstameInput"
-        android:layout_marginTop="50dp"
-        android:layout_alignLeft="@id/firstnameLabel"
-        android:layout_alignStart="@id/firstnameLabel" />
-
-    <EditText
-        android:id="@+id/informationInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/informationLabel"
-        android:layout_marginTop="10dp"
-        android:layout_alignLeft="@id/firstnameLabel"
-        android:layout_alignStart="@id/firstnameLabel"
-        android:autofillHints="@string/information"
-        android:hint="@string/information"
-        android:inputType="text" />
-
-    <Button
-        android:id="@+id/addEventDetailCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:layout_below="@id/informationInput"
-        android:layout_marginTop="50dp"
-        android:layout_alignLeft="@id/firstnameLabel"
-        android:layout_marginLeft="20dp"
-        android:layout_alignStart="@id/firstnameLabel"
-        android:layout_marginStart="20dp" />
-
-    <Button
-        android:id="@+id/addEventDetailConfirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/ok"
-        android:layout_alignTop="@id/addEventDetailCancel"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="50dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50dp" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="217dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginRight="47dp"
+        android:layout_marginBottom="190dp"
+        android:background="#E3E9EF"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/firstnameLabel"
+            android:layout_width="98dp"
+            android:layout_height="29dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="10dp"
+            android:text="@string/firstname" />
+
+        <EditText
+            android:id="@+id/firstameInput"
+            android:layout_width="217dp"
+            android:layout_height="53dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:autofillHints="@string/firstname"
+            android:background="@drawable/border"
+            android:hint="@string/firstname"
+            android:inputType="text"
+            android:paddingLeft="10dp" />
+
+        <TextView
+            android:id="@+id/informationLabel"
+            android:layout_width="136dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="50dp"
+            android:paddingLeft="10dp"
+            android:text="@string/information" />
+
+        <EditText
+            android:id="@+id/informationInput"
+            android:layout_width="217dp"
+            android:layout_height="53dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:autofillHints="@string/information"
+            android:background="@drawable/border"
+            android:hint="@string/information"
+            android:inputType="text"
+            android:paddingLeft="10dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/addEventDetailCancel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:text="@string/cancel" />
+
+            <Button
+                android:id="@+id/addEventDetailConfirm"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:text="@string/ok" />
+        </LinearLayout>
+    </LinearLayout>
 
 </RelativeLayout>
